fixed slide gap for smaller devices. Shadow needs fix

--- a/sass/layout/_reviews.scss
+++ b/sass/layout/_reviews.scss
@@ -67,7 +67,7 @@
     
     &__testimonial { //this is content
       background-color: $background-white-light;
-      width: 100%;
+      width: 95%;
       height: 100%;
       padding: 5%;
       border-radius: 1rem;
