--- a/style.css
+++ b/style.css
@@ -503,7 +503,7 @@ a {
     position: absolute; }
     .slider__slide__testimonial {
       background-color: #ffffff;
-      width: 100%;
+      width: 95%;
       height: 100%;
       padding: 5%;
       border-radius: 1rem;
